--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ header {
   padding: 1rem;
   margin-block: 2.5rem 2.813rem;
   color: #6070ff;
-  border: 1px solid red;
+  border: 1px solid #6070ff;
   border-radius: 16px;
   font-weight: 500;
   font-size: 25px;
