--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
   justify-content: center;
   min-height: 100vh;
   font-family: 'Poppins', sans-serif;
-  min-width: 23.438rem;
+  width: 23.438rem;
   flex-direction: column;
   background-color: #f7f7f9;
   position: relative;
@@ -49,7 +49,7 @@ header {
   height: auto;
   margin-top: 0;
   display: flex;
-  padding: 6.25rem  1.5rem;
+  padding: 6.25rem  1.5rem 0 1.5rem;
   flex-direction: column;
   margin-bottom: 9rem;
   border-bottom-left-radius: 100px;
