--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ header {
   padding: 6.25rem  1.5rem 0 1.5rem;
   flex-direction: column;
   border-bottom-left-radius: 100px;
+  margin-bottom: 5rem;
 }
 
 .text-tiltle {
@@ -194,6 +195,7 @@ header {
   border-top-right-radius: 100px;
   min-height: 1062.15px;
   width: 100%;
+  margin-top: 5rem;
 }
 
 .about-me h2 {
