--- a/style.css
+++ b/style.css
@@ -26,12 +26,9 @@ header {
   background-color: #fff;
   align-items: center;
   padding: 1.5rem;
-  position: sticky;
   width: 100%;
   height: 70px;
-  top: 0;
   color: #6070ff;
-  z-index: 1;
 }
 
 .logo {
@@ -84,6 +81,14 @@ header {
   flex-direction: row;
   gap: 1rem;
   margin-bottom: 8.265rem;
+}
+
+.card-list-item a {
+  color: #7a869a;
+}
+
+.card-list-item1 a {
+  color: #344563;
 }
 
 .contact-list li a {
@@ -146,10 +151,6 @@ header {
   color: #c1c7d0;
   width: 8px;
   height: 8px;
-}
-
-.card-list li a {
-  color: #344563;
 }
 
 .cart-text p {
@@ -240,6 +241,16 @@ header {
 .languages-list {
   color: #000;
   min-height: 66.72px;
+  align-items: center;
+}
+
+.languages-list li img {
+  margin-left: 12px;
+}
+
+.languages-list li img,
+.languages-list li span {
+  margin-block: 12px;
 }
 
 .list-head {
@@ -259,6 +270,7 @@ header {
   font-size: 1.25rem;
   font-weight: 500;
   color: #000;
+  border-radius: 10px;
 }
 
 .work-skills {
