resolve linters errors

--- a/style.css
+++ b/style.css
@@ -198,12 +198,13 @@ header {
   transition: width 2s ease-in-out 1s;
 }
 
-.btn-project:active{
+.btn-project:active {
   background-color: #2230d2;
   color: #fff;
 }
-.btn-project:disabled{
-  background-color: #E5E5E5;
+
+.btn-project:disabled {
+  background-color: #e5e5e5;
   color: #5e6c84;
 }
 
@@ -301,4 +302,3 @@ header {
   font-size: 20px;
   line-height: 24px;
 }
-
