--- a/style.css
+++ b/style.css
@@ -9,9 +9,6 @@
 }
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   min-height: 100vh;
   font-family: 'Poppins', sans-serif;
   width: 23.438rem;
@@ -43,7 +40,7 @@ header {
   background-size: 100% 95%;
   background-repeat: no-repeat;
   left: 0;
-  max-width: 100%;
+  min-width: 100%;
   height: auto;
   margin-top: 0;
   display: flex;
@@ -213,7 +210,7 @@ header {
   padding: 9rem 1.5rem 7rem 1.5rem;
   border-top-right-radius: 100px;
   min-height: 1062.15px;
-  width: 100%;
+  min-width: 100%;
   margin-top: 5rem;
 }
 
@@ -275,6 +272,7 @@ header {
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 36px;
+  color: #000;
 }
 
 .skill {
@@ -283,9 +281,9 @@ header {
   gap: 1rem;
   margin-block: 1.92rem;
   background-color: #f7f7f9;
-  font-size: 1.25rem;
   font-weight: 500;
-  color: #000;
+  font-size: 20px;
+  color: #253858;
   border-radius: 10px;
 }
 
@@ -301,4 +299,5 @@ header {
   font-weight: 500;
   font-size: 20px;
   line-height: 24px;
+  color: #000;
 }
