--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ header {
   background-color: #2230d2;
   color: white;
 }
-
+/*
 @media screen and (min-width: 768px) and (max-width: 905px) {
   body {
     min-width: 100%;
@@ -790,7 +790,8 @@ header {
     margin: auto;
   }
 }
-
+*/
+/*
 @media screen and (min-width: 906px) and (max-width: 1040px) {
   body {
     min-width: 100%;
@@ -806,7 +807,7 @@ header {
 
   header {
     width: 100%;
-    padding-inline: 155px;
+    padding-inline: 6em;
     position: fixed;
     top: 0;
     background-color: #fff;
@@ -1118,8 +1119,9 @@ header {
     margin: auto;
   }
 }
+*/
 
-@media screen and (min-width: 1040px) {
+@media screen and (min-width: 768px) {
   body {
     min-width: 100%;
     min-height: 100vh;
@@ -1228,33 +1230,35 @@ header {
   }
 
   .carts-container {
-    padding: 1.5rem;
-    width: 100%;
-    align-items: center;
-    margin: 8.875em 8.875em 0 8.875em;
-    display: flex;
-    flex-direction: column;
-    gap: 4em;
+    all: unset;
   }
 
   .card {
+    all: unset;
+  }
+.crads-desk{
+   width: 100%;
+    height: auto;
+    margin-top: 114px;
     display: flex;
-    flex-direction: row;
-    gap: 3em;
-    align-items: center;
-    padding: 2.525em;
-    width: 95%;
-    background: #fff;
-    border: 1px solid #dfe1e6;
-    left: 0;
-    top: 0;
-    border-radius: 24px;
+    justify-content: center;
+
+}
+  .card-one{
+  width: auto;
+  height: auto;
+  background: #fff;
+  border-radius: 16px;
+  border: 1px solid #def1e6;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
   }
 
   .cart-image {
     width: 544px;
     height: 448px;
-    margin: 1.5rem 0 1.5rem 1.5rem;
   }
 
   .reverse {
@@ -1263,7 +1267,8 @@ header {
   }
 
   .cart-text {
-    margin-top: -3em;
+    width: 450px;
+    margin: 10px 10px 10px 30px;
   }
 
   .cart-title {
