--- a/style.css
+++ b/style.css
@@ -3,494 +3,453 @@
 * {
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
   text-decoration: none;
+  box-sizing: border-box;
+  list-style: none;
 }
 
 body {
-  width: 100%;
-  min-width: 320px;
-  height: auto;
-  background: #efefef;
+  min-height: 100vh;
   font-family: 'Poppins', sans-serif;
-}
-
-.container {
-  background: #fff;
-  height: 750px;
-  border-bottom-left-radius: 100px;
-  overflow: hidden;
+  min-width: 320px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #f7f7f9;
+  position: relative;
 }
 
 header {
-  width: 100%;
-  height: 60px;
-  background: #fff;
-  padding: 0 30px;
   display: flex;
+  justify-content: space-between;
+  background-color: #fff;
   align-items: center;
-  z-index: 1;
+  padding: 1.5rem;
+  width: 100%;
+  height: 70px;
+  color: #6070ff;
 }
 
 .logo {
-  font-family: 'Poppins', sans-serif;
-  font-size: 22px;
-  color: #6070ff;
+  font-size: 18px;
   font-weight: 700;
+  line-height: 20px;
 }
 
-.menu {
+.nav-items {
   display: none;
 }
 
-.link_list {
-  display: inline-block;
-  font-size: 15px;
-  font-weight: 500;
-  font-family: 'Poppins', sans-serif;
-  margin: 0 20px;
-}
-
-nav {
-  right: 30px;
-  position: absolute;
-}
-
-.bar {
-  width: 25px;
-  height: 3px;
-  border-radius: 1px;
-  margin: 3px 0;
-  background: #6070ff;
-}
-
-#back_image {
-  background-image: url("./Images/fon.png");
+.text-container {
+  background: #fff;
+  background-image: url('Images/background_img.png');
+  background-size: 100% 90%;
   background-repeat: no-repeat;
-  background-size: cover;
-  max-width: 100%;
+  left: 0;
+  min-width: 100%;
   height: auto;
-  position: absolute;
-  border-bottom-left-radius: 100px;
-  margin-left: 2rem;
-}
-.heading {
-  margin-top: 5rem;
-  font-size: 40px;
-  font-weight: 700;
-  margin-left: 26px;
-  color: #172b4d;
-}
-
-.heading span {
-  display: block;
-}
-
-.bio {
-  
-  width: 327px;
-  font-weight: 400;
-  color: #172b4d;
-}
-
-.links {
-  margin: 10px 22px;
-}
-
-.links h3 a {
-  margin: 5px 0;
-  color: #7f8cff;
-  font-size: 16px;
-  font-weight: 500;
-  font-family: 'Poppins', sans-serif;
-}
-
-.links ul li {
-  display: inline-block;
-}
-
-.about_one ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  margin-top: 0;
   display: flex;
-  margin-left: 2rem;
+  padding: 6.25rem  1.5rem 0 1.5rem;
+  flex-direction: column;
+  border-bottom-left-radius: 100px;
+  margin-bottom: 5rem;
+}
+
+.text-tiltle {
+  font-weight: 700;
+  font-size: 2.5rem;
+  display: flex;
+  flex-wrap: nowrap;
+  color: #172b4d;
   margin-top: 1rem;
 }
 
-.about_one p {
-  background: transparent;
-  padding: 4px;
-  margin: 10px 0 0 34px;
-  color: #6070ff;
-  border: 1px solid #6070ff;
-  border-radius: 6px;
-  font-weight: 500;
-  cursor: pointer;
-  outline: none;
-  width: 9rem;
-  display: flex;
-  justify-content: center;
-}
-
-.about_one h3 {
-  margin-top: 0.5rem;
-  margin-left: 1rem;
-  color: rgba(57, 109, 242, 1);
-  font-size: 14px;
-}
-
-.links i {
-  margin: 10px 5px 0 0;
-  color: #505f79;
-}
-
-.Project {
-  width: 100%;
-  height: auto;
-  margin-top: 114px;
-  display: flex;
-  justify-content: center;
-}
-
-.project_one {
-  width: auto;
-  height: auto;
-  background: #fff;
-  border-radius: 16px;
-  border: 1px solid #def1e6;
-  padding: 8px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.project_two {
-  width: auto;
-  height: auto;
-  background: #fff;
-  border-radius: 16px;
-  border: 1px solid #def1e6;
-  padding: 16px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.project_two img {
-  width: 295px;
-  height: 190px;
-  border-radius: 8px;
-}
-
-.project_one img {
-  width: 295px;
-  height: 190px;
-  border-radius: 8px;
-}
-
-.name_des {
-  margin: 10px 0;
-}
-
-.nam {
-  color: #172b4d;
-  font-weight: 699;
-  font-size: 32px;
-  font-family: 'Poppins', sans-serif;
-}
-
-.list {
-  font-family: 'Poppins', sans-serif;
-  display: inline-block;
-  font-size: 18px;
+.text-paragraph {
   font-weight: 400;
+  font-size: 1rem;
+  line-height: 24px;
+  margin-block: 0.75rem;
+}
+
+.contact-title {
+  color: #7f8cff;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.contact-list {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-bottom: 8.265rem;
+}
+
+.card-list-item a {
+  color: #7a869a;
+  white-space: nowrap;
+}
+
+.card-list-item1 a {
+  color: #344563;
+  white-space: nowrap;
+}
+
+.contact-list li a {
+  color: #505f79;
+  font-size: 2rem;
+}
+
+.cart-container {
+  padding: 1.5rem;
+  width: 100%;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  align-items: center;
+  margin: 1rem;
+  gap: 5.5rem;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  margin: 2.5rem;
+  align-items: center;
+  padding: 1rem;
+  width: 327px;
+  min-height: 552px;
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-radius: 1rem;
+}
+
+.cart-image {
+  min-width: 295px;
+  height: 220px;
+  border: 8px;
+  margin-bottom: 12px;
+}
+
+.cart-title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  text-transform: capitalize;
+  width: 18.125rem;
+}
+
+.card-list {
+  margin-block: 1.25rem;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 0.75rem;
+}
+
+.skill img {
+  min-width: 3rem;
+  height: 3rem;
+}
+
+.card-list li img {
+  color: #c1c7d0;
   width: 8px;
   height: 8px;
-  margin-bottom: 3px;
 }
 
-.round {
-  font-size: 40px;
-  align-content: center;
+.cart-text p {
+  font-weight: 400;
+  font-size: 0.938rem;
+  line-height: 1.5rem;
+  color: #344563;
+  min-width: 18.125rem;
+  margin-block: 1.25rem 1rem;
 }
 
-.mic {
+.pro-lang {
+  display: flex;
+  flex-direction: row;
+  gap: 1.25rem;
+  align-items: center;
+  min-width: 92px;
+  height: 24px;
+  margin-block: 20px;
+  color: #6070ff;
+}
+
+.pro-lang li {
+  background-color: #ebebff;
+  border-radius: 8px;
+  padding: 4px 12px;
+}
+
+.btn-project {
+  background: transparent;
+  padding: 1rem;
+  margin-block: 1rem 2rem;
+  color: #6070ff;
+  border: 1px solid #6070ff;
+  border-radius: 16px;
+  font-weight: 500;
+  font-size: 25px;
+  cursor: pointer;
+  outline: none;
+}
+
+.btn-get {
+  background: transparent;
+  padding: 1rem;
+  margin-block: 1rem 2rem;
+  color: #6070ff;
+  border: 1px solid #6070ff;
+  border-radius: 16px;
+  font-weight: 500;
+  font-size: 25px;
+  cursor: pointer;
+  outline: none;
+}
+
+.btn-project:hover,
+.btn-get:hover {
+  background-color: #6070ff;
+  color: #fff;
+  transition: width 2s ease-in-out 1s;
+}
+
+.btn-project:active,
+.btn-get:active {
+  background-color: #2230d2;
+  color: #fff;
+}
+
+.btn-project:disabled,
+.btn-get:disabled {
+  background-color: #e5e5e5;
+  color: #5e6c84;
+}
+
+.about-me {
+  background-color: #fff;
+  padding: 9rem 1.5rem 7rem 1.5rem;
+  border-top-right-radius: 100px;
+  min-height: 1062.15px;
+  min-width: 100%;
+  margin-top: 5rem;
+}
+
+.about-me h2 {
+  font-weight: 700;
+  font-size: 2.5rem;
+  color: #172b4d;
+  line-height: 3.25rem;
+}
+
+.about-me p {
+  font-weight: 400;
+  font-size: 1rem;
+  color: #344563;
+  line-height: 1.5rem;
+  margin-block: 12px;
+}
+
+.contact-title2 {
+  color: #7f8cff;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.contact-list2 {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-block: 1.625rem 0.5rem;
+}
+
+.contact-list2 li a {
+  color: #505f79;
+  font-size: 2rem;
+}
+
+.pro-languages {
+  margin-top: 1.5rem;
+}
+
+.skills-title {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.languages-list {
+  color: #000;
+  align-items: center;
+}
+
+.languages-list li img {
+  margin-left: 12px;
+}
+
+.languages-list li img,
+.languages-list li span {
+  margin-block: 12px;
+  font-weight: 500;
+  font-size: 15px;
+  color: #253858;
+}
+
+.list-head {
+  font-size: 1.25rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 36px;
   color: #000;
 }
 
-.title_des {
-  width: 295px;
-  font-weight: 400;
-  font-size: 15px;
-  font-family: 'Poppins', sans-serif;
-}
-
-.skill_tab {
-  display: inline-block;
-  margin: 15px 0 15px 5px;
-  font-size: 13px;
-  font-weight: 500;
-  color: #6070ff;
-  background: #ebebff;
-  padding: 5px 8px;
-  font-family: 'Poppins', sans-serif;
-  border-radius: 5px;
-}
-
-.bttn {
-  font-size: 17px;
-  font-weight: 500;
-  width: 100px;
-  font-family: 'Poppins', sans-serif;
-  padding: 10px;
-  border: 1px solid #396df2;
-  border-radius: 8px;
-  margin-top: 10px;
-}
-
-.bttn:hover {
-  background: #6070ff;
-  color: #fff;
-}
-
-.bttn:active {
-  background: #2230d2;
-  color: #fff;
-}
-
-.green {
-  color: #396df2;
-}
-
-.green:hover {
-  color: #fff;
-}
-
-.about {
-  width: 100%;
-  margin-top: 114px;
-  height: auto;
-  padding: 10px 0 150px 0;
-  border-top-right-radius: 100px;
-  background: #fff;
-  display: flex;
-  flex-direction: column;
-}
-
-.about_one {
-  margin: 100px 0 20px 0;
-}
-
-.about_text {
-  font-weight: 700;
-  font-size: 40px;
-  font-family: 'Poppins', sans-serif;
-  color: #172b4d;
-  margin: 0 20px;
-}
-
-.about_intro {
-  font-weight: 400;
-  font-size: 16px;
-  margin: 0 20px;
-  font-family: 'Poppins', sans-serif;
-  color: #344563;
-}
-
-.links_two {
-  margin: 10px 20px;
-}
-
-.link_to {
-  margin: 10px 5px 0 0;
-  color: #505f79;
-  display: inline-block;
-}
-
-.let {
-  margin: 5px 0;
-  color: #7f8cff;
-  font-size: 16px;
-  font-weight: 500;
-  font-family: 'Poppins', sans-serif;
-}
-
-.extra i {
-  color: #7f8cff;
-}
-
-.link_to i {
-  margin: 10px 5px 0 0;
-  color: #505f79;
-}
-
-.button {
-  font-size: 17px;
-  font-weight: 500;
-  width: 150px;
-  margin: 20px 20px;
-  font-family: 'Poppins', sans-serif;
-  padding: 10px;
-  border: 1px solid #396df2;
-  border-radius: 8px;
-  margin-top: 10px;
-}
-
-.languages_skill {
-  margin: 0 20px;
-}
-
-.language_text {
-  font-family: 'Poppins', sans-serif;
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.skill_bars {
-  margin: 20px 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.skill_bar {
-  background: #f7f7f9;
-  width: 95%;
-  height: 50px;
-  padding: 10px;
-  margin: 8px 0;
-  display: flex;
-  flex-direction: row;
-  border-radius: 8px;
-}
-
-.skill_text {
-  line-height: 50px;
-  margin: 0 0 0 20px;
-  font-size: 15px;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 500;
-}
-
-.works {
-  margin-top: 40px;
-  width: 100%;
-  height: auto;
-}
-
-.work_skill {
-  background: transparent;
-  flex-direction: row;
-  border-bottom: 1px solid #dfe1e6;
-  border-radius: 0;
-  width: 109%;
-  height: auto;
-  padding: 4px;
+.skill {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  margin: 10px 0;
-  margin-right: 14rem;
+  gap: 1rem;
+  margin-block: 1.92rem;
+  background-color: #f7f7f9;
+  border-radius: 10px;
 }
 
-.work_skill h3 {
-  font-size: 20px;
-  font-weight: 500;
-  font-family: 'Poppins', sans-serif;
-}
-
-.work_skill img {
-  right: 0;
-  width: 30px;
-  margin-right: 30px;
-}
-
-.full_form {
-  background: #6070ff;
-  height: 700px;
+.work-skills {
   display: flex;
-  padding: 0 30px;
-  margin-top: -100px;
-  justify-content: center;
-  border-top-left-radius: 100px;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 1rem 0;
+  margin-right: 1rem;
+  margin-block: 0.75rem;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #000;
 }
 
-form {
-  margin-top: 30px;
-  text-align: center;
-  margin-bottom: 90px;
+.icon {
+  color: #505f79;
 }
 
-.bottom_image {
-  background-image: ("../Images/bottom_im.png");
-  background-position: right;
-  background-repeat: no-repeat;
-  height: auto;
-  position: absolute;
-}
-
-.contact_full {
-  text-align: center;
-}
-
-.contact_me {
-  font-family: 'Poppins', sans-serif;
-  font-size: 35px;
-  color: #fff;
-  text-align: center;
-  margin-top: 80px;
-  font-weight: 700;
-}
-
-.last_par {
-  font-family: 'Poppins', sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  color: #fff;
-  margin: 0 10px 0 0;
-}
-
-#input {
-  padding: 10px 12px;
-  width: 80%;
-  outline: none;
-  border: none;
-  background: #fff;
-  margin: 10px 0;
-  border-radius: 5px;
-  font-family: 'Poppins', sans-serif;
-}
-
-#textpanel {
-  width: 80%;
-  padding: 10px 12px;
-  outline: none;
-  border: none;
-  background: #fff;
-  margin: 10px 0;
-  border-radius: 5px;
-  font-family: 'Poppins', sans-serif;
-}
-
-.submit {
-  padding: 12px 16px;
-  color: #6070ff;
-  background: #fff;
-  width: 150px;
-  font-family: 'Poppins', sans-serif;
-  border-radius: 5px;
-  outline: none;
-  border: 1px solid #7f8cff;
-  cursor: pointer;
-}
-
-.submit:hover {
+.contact-form {
   background: #6070ff;
+  background-image: url('Images/bottom_im.png');
+  background-repeat: no-repeat;
+  background-position-x: right;
+  width: 100%;
+  height: 779px;
+  padding: 24px;
+  position: relative;
+  top: 0;
+  left: 0;
+  border-top-left-radius: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.contact-text {
+  margin-top: 70px;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin-left: 10px;
+}
+
+.contact-text h2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.5rem;
   color: #fff;
 }
 
-.submit:active {
-  background: #2230d2;
+.contact-text p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.25rem;
+  font-style: normal;
+  font-weight: 400;
+  color: #ebebff;
+  line-height: 28px;
+  margin-top: 12px;
 }
 
+.contact-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+}
+
+.contact-container input {
+  width: 100%;
+  padding: 1rem;
+  height: 3rem;
+  border-radius: 8px;
+  outline: none;
+  background: #fff;
+  margin: 10px 0;
+  font-family: 'Poppins', sans-serif;
+  color: #172b4d;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  border: 1px solid #cfd8dc;
+  background-color: #fff;
+}
+
+.contact-container input::placeholder {
+  color: #172b4d;
+}
+
+.contact-container textarea {
+  width: 100%;
+  padding: 1rem;
+  outline: none;
+  background: #fff;
+  margin: 10px 0;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  font-family: 'Poppins', sans-serif;
+  color: #b3bac5;
+  border: 1px solid #cfd8dc;
+  border-radius: 8px;
+  height: 170px;
+}
+
+.contact-container textarea::placeholder {
+  color: #b3bac5;
+}
+
+.cont-btn {
+  background: #fff;
+  padding: 12px 16px;
+  width: 142px;
+  height: 48px;
+  margin-top: 22px;
+  color: #6070ff;
+  border-radius: 8px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 17px;
+  cursor: pointer;
+  outline: none;
+  display: flex;
+  letter-spacing: 3%;
+  border: none;
+  font-style: normal;
+  font-family: 'Poppins', sans-serif;
+}
+
+.cont-btn:hover {
+  background-color: #7e7ed6;
+  color: white;
+}
+
+.cont-btn:active {
+  background-color: #2230d2;
+  color: white;
+}
