--- a/style.css
+++ b/style.css
@@ -98,7 +98,6 @@ header {
   font-size: 2rem;
 }
 
-
 .cart {
   width: 100%;
   height: auto;
@@ -134,7 +133,8 @@ header {
   margin: 2rem;
 }
 
-.cart-image2, .cart-image1 {
+.cart-image2,
+.cart-image1 {
   height: 220px;
   border-radius: 8px;
   width: 295px;
@@ -152,14 +152,12 @@ header {
   font-size: 32px;
 }
 
-
 .card-list {
   margin-block: 1.25rem;
   display: flex;
   flex-flow: row nowrap;
   gap: 0.5rem;
 }
-
 
 .card-list li img {
   color: #c1c7d0;
@@ -168,7 +166,6 @@ header {
   margin-top: 11px;
   border-bottom: 4px;
 }
-
 
 .cart-text p {
   margin-top: -1rem;
@@ -470,7 +467,6 @@ header {
     list-style: none;
     overflow-x: hidden;
   }
-  
 
   header {
     width: 100%;
@@ -544,7 +540,7 @@ header {
     font-weight: 700;
     font-size: 48px;
     line-height: 60px;
-   white-space: nowrap;
+    white-space: nowrap;
     color: #172b4d;
     margin-top: 1rem;
     padding-top: 80px;
@@ -574,7 +570,8 @@ header {
     width: auto;
   }
 
-  .cart-image1, .cart-image2 {
+  .cart-image1,
+  .cart-image2 {
     width: 100%;
     height: 448px;
   }
@@ -591,7 +588,6 @@ header {
     flex-direction: row-reverse;
     margin: 2rem;
   }
-
 
   .cart-text {
     width: 450px;
@@ -610,28 +606,15 @@ header {
     gap: 0.75rem;
   }
 
-  .work_skill img {
-    width: 50px;
-  }
-
-  .skill_bar img {
+  .skill img {
     width: 48px;
+    height: 48px;
   }
 
   .card-list li img {
     color: #c1c7d0;
     width: 8px;
     height: 8px;
-  }
-
-  .card-list-item a {
-    color: #7a869a;
-    white-space: nowrap;
-  }
-
-  .card-list-item1 a {
-    color: #344563;
-    white-space: nowrap;
   }
 
   .cart-text p {
@@ -679,7 +662,6 @@ header {
     line-height: 24px;
   }
 
-
   .btn-get {
     font-size: 17px;
     font-weight: 500;
@@ -720,11 +702,6 @@ header {
     font-weight: 500;
     color: #253858;
     line-height: 20px;
-  }
-
-  .skill img {
-    width: 48px;
-    height: 48px;
   }
 
   .work-skills {
