--- a/style.css
+++ b/style.css
@@ -497,13 +497,14 @@ header {
   color: white;
 }
 
-#portfolio{
+#portfolio {
   position: relative;
 }
-[ data-popup="popup-window"]{
+
+[data-popup="popup-window"] {
   background-color: #fff;
   border: 1px solid #ebecf0;
-  box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
+  box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
   border-radius: 16px;
   padding: 24px;
   width: 90%;
@@ -512,26 +513,29 @@ header {
   visibility: hidden;
 }
 
-.content1, .content4, .content2, .content3{
+.content1,
+.content4,
+.content2,
+.content3 {
   position: relative;
   z-index: 99;
   margin-top: -45em;
   overflow-y: hidden;
-  
 }
 
-.popup-image{
+.popup-image {
   width: 100%;
   height: 220px;
   margin-bottom: 1rem;
 }
-.flex-two{
+
+.flex-two {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.popup-close{
+.popup-close {
   font-size: 1rem;
   position: absolute;
   right: 10%;
@@ -540,12 +544,13 @@ header {
   cursor: pointer;
 }
 
-.text{
+.text {
   margin-left: 0;
   width: 100%;
   font-size: 15px;
   font-weight: 400;
 }
+
 .buttons button {
   background: transparent;
   padding: 0.5rem 1rem;
@@ -608,7 +613,7 @@ header {
     font-weight: 400;
     white-space: nowrap;
   }
-  
+
   .card-list-item20 a {
     color: #7a869a;
     font-size: 15px;
@@ -621,7 +626,8 @@ header {
     font-size: 18px;
     font-weight: 500;
   }
-  .card-list-item10 a{
+
+  .card-list-item10 a {
     color: #344563;
     font-size: 15px;
     font-weight: 500;
@@ -692,9 +698,11 @@ header {
     width: 100%;
     height: 448px;
   }
-.cart-normal{
-  width: 90%;
-}
+
+  .cart-normal {
+    width: 90%;
+  }
+
   .cart-reverse {
     width: 90%;
     height: auto;
@@ -882,10 +890,10 @@ header {
     overflow: hidden;
   }
 
-  [ data-popup="popup-window"]{
+  [data-popup="popup-window"] {
     background-color: #fff;
     border: 1px solid #ebecf0;
-    box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
+    box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
     border-radius: 16px;
     padding: 24px;
     width: 90%;
@@ -895,44 +903,47 @@ header {
     overflow-y: hidden;
     visibility: hidden;
   }
-  .content1, .content4, .content2, .content3{
+
+  .content1,
+  .content4,
+  .content2,
+  .content3 {
     position: relative;
     z-index: 99;
     margin-top: -35em;
     overflow-y: hidden;
-    
   }
-  .popup-image{
+
+  .popup-image {
     width: 90%;
     height: 500px;
     margin-bottom: 1rem;
   }
-  .flex-two{
+
+  .flex-two {
     display: flex;
     gap: 1rem;
     flex-direction: row;
   }
-  
-  .popup-close{
+
+  .popup-close {
     font-size: 1.5rem;
     color: rgba(103, 121, 142, 1);
     margin-right: -2em;
   }
-  
-  .text{
+
+  .text {
     margin-left: 0;
     width: 60%;
-   
   }
 
-  .buttons{
+  .buttons {
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
   }
- 
 }
 
-.popup-icon{
+.popup-icon {
   width: 306px;
 }
