--- a/style.css
+++ b/style.css
@@ -497,9 +497,7 @@ header {
   color: white;
 }
 
-#portfolio {
-  position: relative;
-}
+
 
 [data-popup="popup-window"] {
   background-color: #fff;
@@ -572,7 +570,6 @@ header {
     text-decoration: none;
     box-sizing: border-box;
     list-style: none;
-    overflow-x: hidden;
   }
 
   header {
@@ -691,6 +688,7 @@ header {
   .cart-normal {
     flex-direction: row;
     width: 90%;
+    margin: 5em 2em;
   }
 
   .cart-image1,
@@ -708,7 +706,7 @@ header {
     padding: 16px;
     display: flex;
     flex-direction: row-reverse;
-    margin: 2rem;
+    margin: 5em 2rem;
   }
 
   .cart-text {
@@ -891,35 +889,45 @@ header {
     border: 1px solid #ebecf0;
     box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
     border-radius: 16px;
-    padding: 24px;
-    width: 90%;
+    padding: 2em;
+    width: 85%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     overflow-y: hidden;
     visibility: hidden;
+    -webkit-box-shadow: 10px 8px 119px 200px rgba(0, 0, 0, 0.45);
+    overflow: hidden;
+  }
+  .container1{
+    width: 90%;
   }
 
   .content1,
   .content4,
   .content2,
   .content3 {
-    position: relative;
-    z-index: 99;
-    margin-top: -35em;
+    position: absolute;
+    top: 150%;
+    overflow-y: hidden;
+  }
+  .content3 {
+    position: absolute;
+    top: 140%;
     overflow-y: hidden;
   }
 
   .popup-image {
-    width: 90%;
+    width: 100%;
     height: 500px;
     margin-bottom: 1rem;
   }
 
   .flex-two {
     display: flex;
-    gap: 1rem;
     flex-direction: row;
+    justify-content: space-between;
+    width: 104%;
   }
 
   .popup-close {
@@ -929,17 +937,16 @@ header {
   }
 
   .text-popup {
-    margin-left: 0;
-    width: 60%;
+    width: 70%;
   }
 
-  .buttons {
-    display: flex;
-    flex-direction: row;
-    gap: 0.5rem;
-  }
-}
 
 .popup-icon {
   width: 306px;
+  margin-right: 0;
+}
+
+#first{
+  margin-right: 1%;
+}
 }
