--- a/style.css
+++ b/style.css
@@ -497,6 +497,7 @@ header {
   color: white;
 }
 
+
 [data-popup="popup-window"] {
   position: fixed;
   box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
@@ -510,27 +511,24 @@ header {
   z-index: 100;
   visibility: hidden;
 }
-
-.container1 {
-  width: 90%;
-  margin: 5px auto;
-  background-color: #fff;
-  border-radius: 20px;
-  padding: 24px;
+.container1{
+width: 90%;
+margin: 5px auto;
+background-color: #fff;
+border-radius: 20px;
+padding: 24px;
 }
-
 .popup-image {
   width: 100%;
 }
 
-.pop-list {
-  margin-block: 0.5em;
+.pop-list{
+  margin-block: .5em;
 }
 
-.popicons li {
-  margin-block: 1em 0 !important;
+.popicons li{
+ margin-block: 1em 0 !important;
 }
-
 .flex-two {
   display: flex;
   flex-direction: column;
@@ -567,9 +565,20 @@ header {
   outline: none;
 }
 
-#first {
+#first{
   margin-right: 1%;
 }
+
+#error {
+  color: red;
+  background-color: #fff;
+  font-size: 17px;
+  text-align: center;
+  border-radius: 5px;
+  position: relative;
+  top: 0;
+}
+
 
 @media screen and (min-width: 768px) {
   * {
@@ -904,14 +913,13 @@ header {
     overflow-y: auto;
     z-index: 100;
   }
-
-  .container1 {
-    width: 90%;
-    margin: 5px auto;
-    background-color: #fff;
-    border-radius: 20px;
-    padding: 24px;
-  }
+.container1{
+  width: 90%;
+  margin: 5px auto;
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 24px;
+}
 
   .popup-image {
     width: 100%;
@@ -929,28 +937,39 @@ header {
   }
 
   .popup-close {
-    font-size: 1rem;
-    position: absolute;
-    right: 8%;
-    top: 4%;
-    color: rgba(103, 121, 142, 1);
-    cursor: pointer;
+  font-size: 1rem;
+  position: absolute;
+  right: 10%;
+  top: 7%;
+  color: rgba(103, 121, 142, 1);
+  cursor: pointer;
   }
 
   .text-popup {
     width: 70%;
   }
 
-  .popup-icon {
-    width: 306px;
-    margin-right: 0;
-  }
 
-  .popicons {
-    margin-left: -2%;
-  }
+.popup-icon {
+  width: 306px;
+  margin-right: 0;
+}
 
-  #first {
-    margin-right: 1%;
-  }
+.popicons{
+  margin-left: -2%;
+}
+
+#first{
+  margin-right: 1%;
+}
+
+#error {
+  color: red;
+  background-color: #fff;
+  font-size: 17px;
+  text-align: center;
+  border-radius: 5px;
+  position: relative;
+  top: -10px;
+}
 }
